# bin-mcp

./: .dockerignore  .env.template  .gitignore  CHANGELOG.md  Dockerfile  PUBLISHING.md  README.md  SECURITY_NOTICE.md  USAGE.md  binance.py  example-config.md  glama.json  mcp-config.json  pyproject.toml  pyproject.toml.bak
src/binance_mcp/: server.py  server.py.bak
